<resources>

    <string name="app_name">Wifi Transport</string>
    <string name="title_activity_main">WiFi Direct File Transfer</string>
    <string name="main_activity_server_title">Receive a File</string>
    <string name="path_label">Path</string>
    <string name="temp_path">/</string>
    <string name="browse_path_button">Browse</string>
    <string name="start_server_button">Start Server</string>
    <string name="stop_server_button">Stop Server</string>
    <string name="main_activity_client_title">Send a File</string>
    <string name="start_client">Start Client</string>
    <string name="server_stopped">Server has stopped</string>
    <string name="server_running">Server is running</string>
    <string name="title_activity_file_browser">WiFi Direct File Transfer</string>
    <string name="file_browser_title">File Browser</string>
    <string name="peers_list">Search Results</string>
    <string name="title_activity_client">WiFi Direct File Transfer</string>

    <string name="client_title">Send a File</string>
    <string name="client_search">Search</string>
    <string name="client_send_file">Send</string>
    <string name="no_file_selected">No file selected to transfer</string>
    <string name="select_file_hint">Select following advices to connect</string>

    <string name="scaning">正在搜索可用wifi...</string>
    <string name="list_title">WIFI列表</string>
    <string name="connect_succeed">连接成功！进入聊天室！</string>
    <string name="connect_failed">连接接失败！点击再次连接！</string>

    <string name="creating">稍等片刻，热点正在创建...</string>
    <string name="create_failed">热点创建失败！点击再次创建！</string>

    <string name="select_dir">Select Directory</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Browse File</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>

    <!--File picker-->
    <string name="empty_directory_hint">Empty directory</string>
    <string name="start_path_name">Device</string>
    <string name="type_archive">Archive</string>
    <string name="type_certificate">Certificate</string>
    <string name="type_directory">Directory</string>
    <string name="type_document">File</string>
    <string name="type_drawing">Picture</string>
    <string name="type_excel">Spreadsheet</string>
    <string name="type_image">Image</string>
    <string name="type_music">Music</string>
    <string name="type_video">Video</string>
    <string name="type_pdf">PDF document</string>
    <string name="type_power_point">Presentation</string>
    <string name="type_word">Document</string>
    <string name="type_apk">APK</string>


    <!-- Custom Permission Rationale-->
    <string name="rationale_all">This app needs all permission for complete function</string>
    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="rationale_location_contacts">This app needs access to your location and contacts to know where and who you are.</string>
    <string name="rationale_sms">This app needs access to your sms to read all your great messages.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>
</resources>