<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:paddingTop="10dp">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="browseForFile"
            android:text="@string/browse_path_button"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="searchForPeers"
            android:text="@string/client_search"/>


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="sendFile"
            android:text="@string/client_send_file"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_wifi_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        tools:text="wifi status"
        />

    <TextView
        android:id="@+id/text_client_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        tools:text="client status"
        />


    <TextView
        android:id="@+id/text_transport_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        tools:text="transport status"
        />


    <TextView
        android:id="@+id/text_selected_filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:text="@string/no_file_selected"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/select_file_hint"
        />

    <ListView
        android:id="@+id/list_view_peers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:divider="@color/colorPrimary"
        android:dividerHeight="2dp">
    </ListView>


</LinearLayout>